--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -1,19 +1,18 @@
 \documentclass{article}
+%----packages----%
 \usepackage{geometry}
 \usepackage{hanging}
-\usepackage{pagecolor}
+%\usepackage{pagecolor}
 \usepackage{geometry}
-
-\geometry{
-	a4paper,
-	total={170mm,257mm},
-	left=20mm,
-	top=20mm,
-}
-%\pagecolor{black}
-%\color{white}
+	\geometry{
+		a4paper,
+		total={170mm,257mm},
+		left=20mm,
+		top=20mm,
+	}
 
 \begin{document}
+\sloppy
 \title{Curriculum Vitae}
 \author{Toshitaka (Toshi) Hamamura}
 \maketitle
@@ -26,45 +25,47 @@ National Center for Neurology and Psychiatry\\
 Kodaira,Tokyo 187-8551\\
 \\
 \textbf{E-mail address:}\\	
-thamamura@ncnp.go.jp\\
-to-hamamura@kddi-research.jp\\
+toshitaka.hamamura[@]gmail.com\\
+thamamura[@]ncnp.go.jp\\
 
 \section{Professional Position}
 \begin{itemize}
-	\item 2017-2019: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
-	\item 2019-2020: \textbf{Associate Researcher}, KDDI Research, Inc.
-	\item 2020-present: \textbf{Invited Researcher}, KDDI Research, Inc.
-	\item 2020-present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center for Neurology and Psychiatry)
+	\item 2017--2019: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
+	\item 2019--2020: \textbf{Associate Researcher}, KDDI Research, Inc.
+	\item 2020--present: \textbf{Invited Researcher}, KDDI Research, Inc.
+	\item 2020--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center for Neurology and Psychiatry)
 \end{itemize}
 
 \section{Education}
 \begin{itemize}
-	\item 2006-2010: \textbf{Bachelor of Art in Psychology}, Trinity Western University, Langley, BC, Canada. Minor in Business Administration. \textit{Graduating with distinction.}
-	\item 2012-2015: \textbf{Master of Science in Clinical Psychology}, California State University, Fullerton, CA, USA. 
-	\item 2016-2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program
+	\item 2006--2010: \textbf{Bachelor of Art in Psychology}, Trinity Western University, Langley, BC, Canada. Minor in Business Administration. \textit{Graduating with distinction.}
+	\item 2012--2015: \textbf{Master of Science in Clinical Psychology}, California State University, Fullerton, CA, USA. 
+	\item 2016--2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program
 \end{itemize}
 
 \section{Licenses}
 \begin{itemize}
-	\item 2019-present: \textbf{Clinical Psychologist}, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
-	\item 2019-present: \textbf{Certified Public Psychologist}, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
+	\item 2019--present: \textbf{Clinical Psychologist}, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
+	\item 2019--present: \textbf{Certified Public Psychologist}, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
 \end{itemize} 
-
-\section{Teaching Experience}
-\begin{itemize}
-	\item 2013-2015: \textbf{Graduate assistant}, California State University, Fullerton, Fullerton, USA (Research methods; Learning and memory; Cognitive psychology; Comparative animal bahavior)
-	\item 2017-2019: \textbf{Teaching assistant}, University of Tokyo, Tokyo, Japan (Intelligence Test)
-	\item 2019-present: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
-	\item 2021-present: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
-\end{itemize}
 
 \section{Clinical Experience}
 \begin{itemize}
-	\item 2010-2012: \textbf{Residential Care Worker}, Developmental Disabilities Association, Richmond, BC, Canada
-	\item 2011-2012: \textbf{Mental Health Worker}, Coast Mental Health, Vancouver, BC, Canada
-	\item 2016-2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
-	\item 2017-2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
-	\item 2018-2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
+	\item 2010--2012: \textbf{Residential Care Worker}, Developmental Disabilities Association, Richmond, BC, Canada
+	\item 2011--2012: \textbf{Mental Health Worker}, Coast Mental Health, Vancouver, BC, Canada
+	\item 2016--2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
+	\item 2017--2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
+	\item 2018--2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
+	\item 2019--present: \textbf{Psychotherapist}, National Center for Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
+	\item 2020--present: \textbf{Psychotherapist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
+\end{itemize}
+
+\section{Teaching Experience}
+\begin{itemize}
+	\item 2013--2015: \textbf{Graduate assistant}, California State University, Fullerton, Fullerton, USA (Research methods; Learning and memory; Cognitive psychology; Comparative animal bahavior)
+	\item 2017--2019: \textbf{Teaching assistant}, University of Tokyo, Tokyo, Japan (Intelligence Test)
+	\item 2019--present: \textbf{Part-time lecturer}, Seikei University, Tokyo, Japan (Introduction to Psychology)
+	\item 2021--present: \textbf{Part-time lecturer}, Tokyo Women's Christian University, Tokyo, Japan (Third-year undergraduate seminar)
 \end{itemize}
 
 \section{Publication}
@@ -75,7 +76,10 @@ to-hamamura@kddi-research.jp\\
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. JMIR Research Protocol, 7(5):e10650. doi:10.2196/10650
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 1-12. doi:10.1007/s11469-018-9991-8
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. doi:10.1038/s41398-021-01696-x
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports. doi:10.1016/j.abrep.2021.100400	
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research.
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles}
@@ -85,6 +89,11 @@ to-hamamura@kddi-research.jp\\
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
 \end{enumerate}
 
+\section{Preprints}
+\begin{enumerate}
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
+\end{enumerate}
+	 
 \section{Academic Presentation}
 \subsection{International Conference}
 \begin{enumerate}
@@ -103,34 +112,37 @@ to-hamamura@kddi-research.jp\\
 	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., \& Shimoyama, H. (2017, September). The effect of self-monitoring application on drinking and psychological distress. Poster presented at the 39th Annual Convention of the Japanese Society of Alcohol-Related Problems, Yokohama, Japan.
 	\item \underline{Hamamura, T.}, Nakamura, A., Yoshida, S., Mearns, J., \& Shimoyama, H. (2017, September). The Effect of virtual reality facial feedback on affect and autobiographical recall: A role of negative mood regulation expectancies. Poster presented at the 81st Annual Convention of the Japanese Psychological Association, Kurume, Japan.
 	\item \underline{Hamamura, T.} (2018, September). The role of drinking quantity and alcohol expectancies as predictors of alcoholism tendency. Poster presented at the 82nd Annual Convention of the Japanese Psychological Association, Sendai, Japan.
-	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. （2019, September）. Do Internet addiction types predict smartphone use among adolescents?．Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
-	\item Tinting, A., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. （2019, September）. The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
+	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, September). Do Internet addiction types predict smartphone use among adolescents?．Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
+	\item Tinting, A., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. (2019, September). The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan．
 	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. Oral presentation at IEICE General Conference 2020, online.
-	\item \underline{Hamamura, T.}, Mearns, J.（2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan
-	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan
-	\item \underline{Hamamura, T.}（2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan
-	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A., (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online．
+	\item \underline{Hamamura, T.}, Mearns, J.（2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item \underline{Hamamura, T.}（2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
 	\end{enumerate}
 
 \section{Other Publication}
 	\begin{enumerate}
-		\item \underline{Hamamura, T.} (2019). Literature introducation: Is smartphone addiction really an addiction? (Panova, T. \& Carbonell, X., 2018) Japanese Journal of Psychotherapy，p.602-603
-		\item \underline{Hamamura, T.} (2020). Book review: Treatment for substance use disorder (Matsumoto, T., 2020). Japanese Journal of Psychotherapy，p.715
+		\item \underline{Hamamura, T.} (2019). Literature introducation: Is smartphone addiction really an addiction? (Panova, T. \& Carbonell, X., 2018) Japanese Journal of Psychotherapy, p.602-603
+		\item \underline{Hamamura, T.} (2020). Book review: Treatment for substance use disorder (Matsumoto, T., 2020). Japanese Journal of Psychotherapy, p.715
 	\end{enumerate}
 
 \section{Funded Research and Grants}
-\begin{itemize}
-	\item 2016-2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
-	\item 2016-2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2017-2019: Grant-in-Aid for JSPS Fellows (DC2), Japan Society for the Promotion of Science. The Cultural and Developmental Role of Negative Mood Regulation Expectancies. (Individual Project; Principal Investigator). Grant amount: ¥2,100,000
-	\item 2017-2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Understanding Mechanisms and Functionality of Self-Monitoring App and its Application in Clinical Settings. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2017-2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
-	\item 2018-2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2018-2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
-	\item 2020-2022: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
-	\item 2020-2022: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
-	\end{itemize}
+\begin{description}
+	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
+	\item 2016--2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2017--2019: Grant-in-Aid for JSPS Fellows (DC2), Japan Society for the Promotion of Science. The Cultural and Developmental Role of Negative Mood Regulation Expectancies. (Individual Project; Principal Investigator). Grant amount: ¥2,100,000
+	\item 2017--2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Understanding Mechanisms and Functionality of Self-Monitoring App and its Application in Clinical Settings. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2017--2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
+	\item 2018--2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2018--2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
+	\item 2020--2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
+	\item 2020--2023: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
+	\item 2021--2024: Grant-in-Aid for Scientific Research, Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
+	\end{description}
 
 \section{Society Affiliation}
 \begin{itemize}
@@ -143,10 +155,10 @@ to-hamamura@kddi-research.jp\\
 	%\item Society for Personality and Social Psychology
 \end{itemize}
 
-\section{Editorial Review}
+\section{Manuscript Review}
 \begin{itemize}
-	\item International Journal of Mental Health and Addiction (2)
-	\item Journal of Occupational Health (1)
+	\item International Journal of Mental Health and Addiction
+	\item Journal of Occupational Health
 \end{itemize}
 
 \section{Awards}
