--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -20,42 +20,55 @@
 \begin{document}
 \title{Curriculum Vitae}
 \author{浜村\ 俊傑}
-\date{2021年6月12日}
+\date{2021年12月24日}
 \maketitle
 
 \noindent
 \section{現所属}
 国立研究開発法人国立精神・神経医療研究センター　認知行動療法センター\\
-\textbf{E-mail}: thamamura@ncnp.go.jp\\
-\\
-株式会社KDDI総合研究所　健康行動変容グループ\\
-\textbf{E-mail}: to-hamamura@kddi-research.jp
+株式会社KDDI総合研究所　健康医療グループ\\~\\
+\textbf{E-mailアドレス}\\
+thamamura[@]ncnp.go.jp\\
+toshitaka.hamamura[@]gmail.com
 
 \section{職歴}
 \begin{description}
-	\item 2010年09月～2012年06月	発達障害団体（Developmental Disabilities Association）
-	\item 2017年04月～2019年03月	日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
-	\item 2019年04月～2020年03月 株式会社KDDI総合研究所　研究員
-	\item 2020年04月～現在 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
-	\item 2019年04月～現在 株式会社KDDI総合研究所　招聘研究員
+	\item [2010年09月～2012年06月] 発達障害団体（Developmental Disabilities Association）
+	\item [2017年04月～2019年03月] 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
+	\item [2019年04月～2020年03月] 株式会社KDDI総合研究所　研究員
+	\item [2020年04月～現在] 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
+	\item [2019年04月～現在] 株式会社KDDI総合研究所　招聘研究員
 \end{description}
 
 \section{学歴}
 \begin{description}
-	\item 2003年09月～2006年06月　デイビッド・トンプソン 高等学校
-	\item 2006年09月～2010年05月　トリニティ・ウエスタン大学 人文社会科学部 心理学専修
-	\item 2012年04月～2015年08月　カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
-	\item 2016年04月～2019年03月　東京大学 大学院教育学研究科 総合教育科学専攻 心身発達科学専修 臨床心理学コース 博士課程
+	\item [2003年09月～2006年06月] デイビッド・トンプソン 高等学校
+	\item [2006年09月～2010年05月] トリニティ・ウエスタン大学 人文社会科学部 心理学専修
+	\item [2012年04月～2015年08月] カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
+	\item [2016年04月～2019年03月] 東京大学 大学院教育学研究科 総合教育科学専攻 心身発達科学専修 臨床心理学コース 博士課程．副専攻：Social ICT Graduate Program（リーディング大学院）
 \end{description}
 \section{資格}
 \begin{description}
 	\item 2019年04月01日 \textbf{臨床心理士}，日本臨床心理士資格認定協会（登録番号36772）
 	\item 2019年10月25日 \textbf{公認心理師}，厚生労働省・文部科学省 （第32261号）
 \end{description}
+
+\section{臨床経験}
+	\begin{description}
+	\item [2010年〜2012年] \textbf{Residential Care Worker（常勤）}, Developmental Disabilities Association, カナダ
+	\item [2011年〜2012年] \textbf{Mental Health Worker（非常勤）}, Coast Mental Health, カナダ
+	\item [2016年〜2017年] \textbf{メンタルヘルスワーカー（非常勤）}，台東区保健所
+	\item [2016年〜2019年] \textbf{相談員（実習生）}，相談室，教育学研究科，東京大学
+	\item [2017年〜2018年] \textbf{相談員（非常勤）}，学生支援室，理学系研究科，東京大学
+	\item [2018年〜2019年] \textbf{相談員（非常勤）}, サポートルーム，経済学研究科，東京大学
+	\item [2019年〜現在] \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
+	\item [2020年〜現在] \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
+	\end{description}
+
 \section{担当したことのある科目}
 \begin{description}
-	\item 2019年09月～現在	心理学の基礎（成蹊大学）
-	\item 2021年04月〜現在　3年次演習（東京女子大学）
+	\item [2019年09月～現在]	心理学の基礎（成蹊大学）
+	\item [2021年04月〜現在] 3年次演習（東京女子大学）
 \end{description}
 
 \section{学位論文}
@@ -64,6 +77,7 @@
 		\item Hamamura, T. (2015). Depression and somatic symptoms in Japanese college students: Negative mood regulation expectancies and honne and tatemae as personality predictors. California State University, Fullerton Master Thesis.
 		\item 浜村\ 俊傑（2019）．Examining the Role of Expectancies and the Effect of Computer-delivered Interventions for Problem Drinking（問題飲酒における期待の役割の解明とコンピュータ介入の効果検証）　東京大学大学院教育学研究科総合研究科博士論文（未公刊）
 	\end{enumerate}
+
 \section{学術論文（査読あり）}
 \begin{enumerate}
 	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014). The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. Journal of Multicultural Counseling Development, 42, 205-217. doi: 10.1002/j.2161-1912.2014.00055.x
@@ -71,6 +85,10 @@
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. JMIR Research Protocol, 7(5):e10650\\ doi:10.2196/10650
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 195-206. doi:10.1007/s11469-018-9991-8
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. doi:10.1038/s41398-021-01696-x
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports. doi:10.1016/j.abrep.2021.100400
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research.
 \end{enumerate}
 
 \section{学術論文（査読なし）}
@@ -78,6 +96,11 @@
 	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村杏奈・下山晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，22-29．
 	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
 	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
+\end{enumerate}
+
+\section{プレプリント}
+\begin{enumerate}
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
 \end{enumerate}
 
 \section{国際学会・シンポジウム等における発表}
@@ -101,7 +124,7 @@
 	\item 安\ 婷婷・\underline{浜村\ 俊傑}・岸本\ 鵬子・マーンズジャック（2019）.中国人留学生における学校ストレスと異文化適応ストレスの抑うつと不安への影響：ネガティブ気分制御期待感の調整効果．日本心理学会第83回大会発表論文集.（ポスター）
 	\item\underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫(2019).中高生を対象としたスマホ依存介入アプリの効果検証ーログデータを用いた簡易的ランダム化比較試験－．2019年度アルコール・薬物依存関連学会合同学術総会．179．（口頭）
 	\item 三島\ 浩路・黒川\ 雅幸・永田\ 雅俊・小西\ 達也・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫（2020年3月）．日常生活に関する主観的評価と個人特性によるスマートフォン依存傾向の違い　2020年電子情報通信学会総合大会　41-45．　
-	\item \underline{浜村\ 俊傑}・マーンズ，J.（2020年9月）．飲むなら独りか仲間とか？——高齢者の多量飲酒に着目して——．日本心理学会第84回大会.（ポスター）
+	\item \underline{浜村\ 俊傑}・マーンズ，J.（2020年9月）．飲むなら独りか仲間とか？——高齢者の多量飲酒に着目して——．日本心理学会第84回大会.（デジタルポスター）
 	\item 黒川\ 雅幸・三島\ 浩路・\underline{浜村\ 俊傑}・小西\ 達也・永田\ 雅俊・本庄\ 勝・米山\ 暁夫（2020年9月）．	スマートフォン利用によるインターネット依存傾向尺度（短縮版）の検討．日本心理学会第84回大会.（ポスター）
 	\item \underline{浜村\ 俊傑}（2020年10月）スマホ依存の定義とメンタルヘルスとの関連	\underline{浜村\ 俊傑}（企画代表者）スマートフォン依存の現状と対策を考える：教育，医療，産業の	観点から日本心理学会第84回大会.（公募シンポジウム，口頭）
 	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・川島\ 一朔・酒井\ 雄希・田中\ 沙織・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異	なるの	か？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
@@ -109,6 +132,10 @@
 	\item 三宅\ 佑果・小林\ 直・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝（2021年3月10日）．スマートフォン嗜癖とコーピングの関係に関する一考察．2021年電子情報通信学会総合大会（口頭）
 	\item 池田\ 直樹・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫・小林\ 七彩・中島\ 涼子・治徳\ 大介（2021年3月10日）．スマートフォン嗜癖診断システム開発に向けた臨床現場でのスマートフォン利用ログ分析．2021年電子情報通信学会総合大会（口頭）
 	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・岡\ 大樹・千葉\ 俊周（2021年3月15日）．新型コロナウィルス感染症流行におけるスマートフォンの利用実態ならびにスマートフォン嗜癖の検知．電子情報通信学会技術研究報，1 - 5（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異なるのか？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
+	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021年9月1日〜8日）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会.（デジタルポスター）
+	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021年12月18日）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会（口頭）
+
 \end{enumerate}
 
 \section{学術雑誌等又は商業誌における解説，総説}
@@ -119,7 +146,7 @@
 
 \section{その他（アウトリーチ活動等）}
 \begin{enumerate}
-	\item 浜村\ 俊傑（2020年9月5日）．デジタル機器と子どものネット依存について．サンライズ・クリスチャン・チャーチ
+	\item 浜村\ 俊傑（2020年9月5日）．デジタル機器と子どものネット依存について．サンライズ・クリスチャン・チャーチ
 	\item 浜村\ 俊傑（2021年6月9日）．心理学を覗いてみたいあなたへ〜学問の紹介とインターネット依存のお話〜．国際基督教大学高等学校マルチイベント
 \end{enumerate}
 
@@ -127,24 +154,27 @@
 %2016年04月－2019年03月	東京大学大学院 教育学研究科 臨床心理学コース紀要係\\
 \section{競争的研究費}
 \begin{description}
-	\item 2016年05月―2017年03月	東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響-ネガティブ気分制御期待感に着目して- (研究代表者) ¥1,500,000
-	\item 2016年05月―2017年03月   東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：心いき東大プロジェクトアプリケーションの効果検討−呼吸法と行動観察に着目して−　(研究代表者) ¥300,000
-	\item 2017年04月―2019年03月	日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：ネガティブな気分回復における期待感の役割：文化的および発達的検討 (研究代表者) ¥2,100,000
-	\item 2017年05月―2018年03月	東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：セルフモニタリングアプリケーション機能の解明と実践場面での応用　(研究代表者) ¥300,000
-	\item 2017年10月―2018年03月	東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
-	\item 2018年07月―2019年03月	東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
-	\item 2018年07月―2019年03月	東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
-	\item 2020年04月―2021年03月	日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
-	\item 2020年04月―現在　日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
+	\item [2016年05月〜2017年03月]	 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響-ネガティブ気分制御期待感に着目して- (研究代表者) ¥1,500,000
+	\item [2016年05月〜2017年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：心いき東大プロジェクトアプリケーションの効果検討−呼吸法と行動観察に着目して−　(研究代表者) ¥300,000
+	\item [2017年04月〜2019年03月] 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：ネガティブな気分回復における期待感の役割：文化的および発達的検討 (研究代表者) ¥2,100,000
+	\item [2017年05月〜2018年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：セルフモニタリングアプリケーション機能の解明と実践場面での応用　(研究代表者) ¥300,000
+	\item [2017年10月〜2018年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
+	\item [2018年07月〜2019年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
+	\item [2018年07月〜2019年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
+	\item [2020年04月〜2021年03月] 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
+	\item [2020年04月〜現在] 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
+	\item [2021年04月〜現在] 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
 \end{description}
 
-\section{査読歴など}
-	\begin{description}
-	\item International Journal of Mental Health and Addiction (2本)
-	\end{description}
+\section{査読歴}
+	\begin{enumerate}
+	\item International Journal of Mental Health and Addiction
+	\item Journal of Occupational Health
+\end{enumerate}
 \section{賞罰}
 \begin{description}
-	\item 2017年9月	日本アルコール関連問題学会 第6回小杉好弘記念賞
+	\item 2010年05月　Graduating with Distinction, トリニティ・ウエスタン大学
+	\item 2017年09月　日本アルコール関連問題学会 第6回小杉好弘記念賞
 \end{description}
 
 \end{document}
