--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -71,15 +71,15 @@ thamamura[@]ncnp.go.jp\\
 \section{Publication}
 \subsection{Peer-Reviewed Articles}
 \begin{enumerate}
-	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. Journal of Multicultural Counseling Development, 42, 205-217. doi: 10.1002/j.2161-1912.2014.00055.x
-	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. JMIR Mental Health (forthcoming). doi:10.2196/mental.8984 http://dx.doi.org/10.2196/mental.8984
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. JMIR Research Protocol, 7(5):e10650. doi:10.2196/10650
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 1-12. doi:10.1007/s11469-018-9991-8
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. Journal of Psychiatric Research, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. Translational Psychiatry. doi:10.1038/s41398-021-01696-x
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports. doi:10.1016/j.abrep.2021.100400	
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research.
+	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. doi: 10.1002/j.2161-1912.2014.00055.x
+	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health} (forthcoming). doi:10.2196/mental.8984 http://dx.doi.org/10.2196/mental.8984
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650. doi:10.2196/10650
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54, 351-359. doi:10.1002/ijop.12467
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 1-12. doi:10.1007/s11469-018-9991-8
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (in press). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 0022-3956. doi:10.1016/j.jpsychires.2021.07.054
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}. doi:10.1038/s41398-021-01696-x
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2021). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}. doi:10.1016/j.abrep.2021.100400	
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}.
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles}
@@ -113,7 +113,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Nakamura, A., Yoshida, S., Mearns, J., \& Shimoyama, H. (2017, September). The Effect of virtual reality facial feedback on affect and autobiographical recall: A role of negative mood regulation expectancies. Poster presented at the 81st Annual Convention of the Japanese Psychological Association, Kurume, Japan.
 	\item \underline{Hamamura, T.} (2018, September). The role of drinking quantity and alcohol expectancies as predictors of alcoholism tendency. Poster presented at the 82nd Annual Convention of the Japanese Psychological Association, Sendai, Japan.
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, September). Do Internet addiction types predict smartphone use among adolescents?．Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
-	\item Tinting, A., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. (2019, September). The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. (2019, September). The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan．
 	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. Oral presentation at IEICE General Conference 2020, online.
 	\item \underline{Hamamura, T.}, Mearns, J.（2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
@@ -122,7 +122,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
-	\end{enumerate}
+\end{enumerate}
 
 \section{Other Publication}
 	\begin{enumerate}
