--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -33,42 +33,42 @@ toshitaka.hamamura[@]gmail.com
 
 \section{職歴}
 \begin{description}
-	\item [2010年09月～2012年06月] 発達障害団体（Developmental Disabilities Association）
-	\item [2017年04月～2019年03月] 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
-	\item [2019年04月～2020年03月] 株式会社KDDI総合研究所　研究員
-	\item [2020年04月～現在] 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
-	\item [2019年04月～現在] 株式会社KDDI総合研究所　招聘研究員
+	\item 2010年09月～2012年06月： 発達障害団体（Developmental Disabilities Association）
+	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
+	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　研究員
+	\item 2020年04月～現在： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
+	\item 2019年04月～現在： 株式会社KDDI総合研究所　招聘研究員
 \end{description}
 
 \section{学歴}
 \begin{description}
-	\item [2003年09月～2006年06月] デイビッド・トンプソン 高等学校
-	\item [2006年09月～2010年05月] トリニティ・ウエスタン大学 人文社会科学部 心理学専修
-	\item [2012年04月～2015年08月] カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
-	\item [2016年04月～2019年03月] 東京大学 大学院教育学研究科 総合教育科学専攻 心身発達科学専修 臨床心理学コース 博士課程．副専攻：Social ICT Graduate Program（リーディング大学院）
+	\item 2003年09月～2006年06月： デイビッド・トンプソン 高等学校
+	\item 2006年09月～2010年05月： トリニティ・ウエスタン大学 人文社会科学部 心理学専修
+	\item 2012年04月～2015年08月： カリフォルニア州立大学フラートン校 大学院人文社会科学研究科 心理学専攻 臨床心理学コース 修士課程
+	\item 2016年04月～2019年03月： 東京大学 大学院教育学研究科 総合教育科学専攻 心身発達科学専修 臨床心理学コース 博士課程．副専攻：Social ICT Graduate Program（リーディング大学院）
 \end{description}
 \section{資格}
 \begin{description}
-	\item 2019年04月01日 \textbf{臨床心理士}，日本臨床心理士資格認定協会（登録番号36772）
-	\item 2019年10月25日 \textbf{公認心理師}，厚生労働省・文部科学省 （第32261号）
+	\item 2019年04月01日： \textbf{臨床心理士}，日本臨床心理士資格認定協会（登録番号36772）
+	\item 2019年10月25日： \textbf{公認心理師}，厚生労働省・文部科学省 （第32261号）
 \end{description}
 
 \section{臨床経験}
 	\begin{description}
-	\item [2010年〜2012年] \textbf{Residential Care Worker（常勤）}, Developmental Disabilities Association, カナダ
-	\item [2011年〜2012年] \textbf{Mental Health Worker（非常勤）}, Coast Mental Health, カナダ
-	\item [2016年〜2017年] \textbf{メンタルヘルスワーカー（非常勤）}，台東区保健所
-	\item [2016年〜2019年] \textbf{相談員（実習生）}，相談室，教育学研究科，東京大学
-	\item [2017年〜2018年] \textbf{相談員（非常勤）}，学生支援室，理学系研究科，東京大学
-	\item [2018年〜2019年] \textbf{相談員（非常勤）}, サポートルーム，経済学研究科，東京大学
-	\item [2019年〜現在] \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
-	\item [2020年〜現在] \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
+	\item 2010年〜2012年： \textbf{Residential Care Worker（常勤）}, Developmental Disabilities Association, カナダ
+	\item 2011年〜2012年： \textbf{Mental Health Worker（非常勤）}, Coast Mental Health, カナダ
+	\item 2016年〜2017年： \textbf{メンタルヘルスワーカー（非常勤）}，台東区保健所
+	\item 2016年〜2019年： \textbf{相談員（実習生）}，相談室，教育学研究科，東京大学
+	\item 2017年〜2018年： \textbf{相談員（非常勤）}，学生支援室，理学系研究科，東京大学
+	\item 2018年〜2019年： \textbf{相談員（非常勤）}, サポートルーム，経済学研究科，東京大学
+	\item 2019年〜現在： \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
+	\item 2020年〜現在： \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
 	\end{description}
 
 \section{担当したことのある科目}
 \begin{description}
-	\item [2019年09月～現在]	心理学の基礎（成蹊大学）
-	\item [2021年04月〜現在] 3年次演習（東京女子大学）
+	\item 2019年09月～現在： 心理学の基礎（成蹊大学）
+	\item 2021年04月〜現在： 3年次演習（東京女子大学）
 \end{description}
 
 \section{学位論文}
@@ -154,16 +154,16 @@ toshitaka.hamamura[@]gmail.com
 %2016年04月－2019年03月	東京大学大学院 教育学研究科 臨床心理学コース紀要係\\
 \section{競争的研究費}
 \begin{description}
-	\item [2016年05月〜2017年03月]	 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響-ネガティブ気分制御期待感に着目して- (研究代表者) ¥1,500,000
-	\item [2016年05月〜2017年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：心いき東大プロジェクトアプリケーションの効果検討−呼吸法と行動観察に着目して−　(研究代表者) ¥300,000
-	\item [2017年04月〜2019年03月] 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：ネガティブな気分回復における期待感の役割：文化的および発達的検討 (研究代表者) ¥2,100,000
-	\item [2017年05月〜2018年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：セルフモニタリングアプリケーション機能の解明と実践場面での応用　(研究代表者) ¥300,000
-	\item [2017年10月〜2018年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
-	\item [2018年07月〜2019年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
-	\item [2018年07月〜2019年03月] 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
-	\item [2020年04月〜2021年03月] 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
-	\item [2020年04月〜現在] 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
-	\item [2021年04月〜現在] 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
+	\item 2016年05月〜2017年03月	： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：VR表情フィードバック装置が情動・自伝的記憶に及ぼす影響-ネガティブ気分制御期待感に着目して- (研究代表者) ¥1,500,000
+	\item 2016年05月〜2017年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：心いき東大プロジェクトアプリケーションの効果検討−呼吸法と行動観察に着目して−　(研究代表者) ¥300,000
+	\item 2017年04月〜2019年03月： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：ネガティブな気分回復における期待感の役割：文化的および発達的検討 (研究代表者) ¥2,100,000
+	\item 2017年05月〜2018年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：セルフモニタリングアプリケーション機能の解明と実践場面での応用　(研究代表者) ¥300,000
+	\item 2017年10月〜2018年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
+	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
+	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
+	\item 2020年04月〜2021年03月： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
+	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
+	\item 2021年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
 \end{description}
 
 \section{査読歴}
@@ -173,8 +173,8 @@ toshitaka.hamamura[@]gmail.com
 \end{enumerate}
 \section{賞罰}
 \begin{description}
-	\item 2010年05月　Graduating with Distinction, トリニティ・ウエスタン大学
-	\item 2017年09月　日本アルコール関連問題学会 第6回小杉好弘記念賞
+	\item 2010年05月： Graduating with Distinction, トリニティ・ウエスタン大学
+	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞
 \end{description}
 
 \end{document}
