--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -56,8 +56,8 @@ thamamura[@]ncnp.go.jp\\
 	\item 2016--2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
 	\item 2017--2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
 	\item 2018--2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
-	\item 2019--present: \textbf{Psychotherapist}, National Center for Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
-	\item 2020--present: \textbf{Psychotherapist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
+	\item 2019--present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
+	\item 2020--present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
 \end{itemize}
 
 \section{Teaching Experience}
@@ -82,15 +82,11 @@ thamamura[@]ncnp.go.jp\\
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}.
 \end{enumerate}
 
-\subsection{Non-Peer-Reviewed Articles}
+\subsection{Non-Peer-Reviewed Articles and Preprints}
 \begin{enumerate}
 	\item Ueda, M., \underline{Hamamura, T.}, Nakamura, A., \& Shimoyama, H. (2017). The application of animal research on the gene-environment interaction: A review. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 40, 22-29.
 	\item Uchimura, Y., \underline{Hamamura, T.}, Kitahara, Y., Oka, M., Suzuki, T., Kobayashi, N., \& Shimoyama, H., (2018). A Review on the population approach using Acceptance and commitment therapy: Increase of well-being and prevention effects. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 41, 34-41.
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
-\end{enumerate}
-
-\section{Preprints}
-\begin{enumerate}
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
 \end{enumerate}
 	 
@@ -105,6 +101,8 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
 	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K. and \underline{Hamamura, T.} and Honjo, M. and Yoneyama, A. and Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	
 \end{enumerate}
 
 \subsection{Domestic Conference}
