--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -91,15 +91,11 @@ toshitaka.hamamura[@]gmail.com
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (in press). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research.
 \end{enumerate}
 
-\section{学術論文（査読なし）}
+\section{学術論文・プレプリント（査読なし）}
 \begin{enumerate}
 	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村杏奈・下山晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，22-29．
 	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
 	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
-\end{enumerate}
-
-\section{プレプリント}
-\begin{enumerate}
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. doi:110.1101/2020.12.15.20246819
 \end{enumerate}
 
@@ -109,10 +105,11 @@ toshitaka.hamamura[@]gmail.com
 	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students.} Poster presented at International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor.} The 31st International Congress of Psychology, Yokohama. (Poster)
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} Poster presented at the 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at International Congress of Psychological Science, Paris, France.
 	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K. and \underline{Hamamura, T.} and Honjo, M. and Yoneyama, A. and Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
 \end{enumerate}
 
 \section{国内学会・シンポジウム等における発表}
