--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -20,7 +20,7 @@
 \section{Contact Information}
 \textbf{Address:}\\ 
 National Center for Cognitive Behavior Therapy and Research,\\
-National Center for Neurology and Psychiatry\\
+National Center of Neurology and Psychiatry\\
 4-1-1 Ogawa-Higashi,\\
 Kodaira,Tokyo 187-8551\\
 \\
@@ -33,14 +33,14 @@ thamamura[@]ncnp.go.jp\\
 	\item 2017--2019: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
 	\item 2019--2020: \textbf{Associate Researcher}, KDDI Research, Inc.
 	\item 2020--present: \textbf{Invited Researcher}, KDDI Research, Inc.
-	\item 2020--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center for Neurology and Psychiatry)
+	\item 2020--present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
 \end{itemize}
 
 \section{Education}
 \begin{itemize}
 	\item 2006--2010: \textbf{Bachelor of Art in Psychology}, Trinity Western University, Langley, BC, Canada. Minor in Business Administration. \textit{Graduating with distinction.}
 	\item 2012--2015: \textbf{Master of Science in Clinical Psychology}, California State University, Fullerton, CA, USA. 
-	\item 2016--2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program
+	\item 2016--2019: \textbf{Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan. Minor in Social ICT Graduate Program.
 \end{itemize}
 
 \section{Licenses}
@@ -56,7 +56,7 @@ thamamura[@]ncnp.go.jp\\
 	\item 2016--2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
 	\item 2017--2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
 	\item 2018--2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
-	\item 2019--present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
+	\item 2019--present: \textbf{Psychologist}, National Center of Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
 	\item 2020--present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
 \end{itemize}
 
