--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -115,7 +115,7 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan．
 	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. Oral presentation at IEICE General Conference 2020, online.
 	\item \underline{Hamamura, T.}, Mearns, J.（2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
-	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
+	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September8--November 2). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}（2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
