--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -130,7 +130,7 @@ toshitaka.hamamura[@]gmail.com
 	\item 池田\ 直樹・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫・小林\ 七彩・中島\ 涼子・治徳\ 大介（2021年3月10日）．スマートフォン嗜癖診断システム開発に向けた臨床現場でのスマートフォン利用ログ分析．2021年電子情報通信学会総合大会（口頭）
 	\item 小林\ 直・三宅\ 佑果・畑川\ 養幸・\underline{浜村\ 俊傑}・本庄\ 勝・岡\ 大樹・千葉\ 俊周（2021年3月15日）．新型コロナウィルス感染症流行におけるスマートフォンの利用実態ならびにスマートフォン嗜癖の検知．電子情報通信学会技術研究報，1 - 5（口頭）
 	\item \underline{浜村\ 俊傑}・小林\ 直・本庄\ 勝・三宅\ 佑果・千葉\ 俊周・米山\ 暁夫（2020年11月）．スマホ依存は長時間のスマホ利用とどのように異なるのか？——性格指標や生活実態における比較から——　第55回日本アルコール・アディクション医学会学術総会（口頭）
-	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021年9月1日〜8日）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会.（デジタルポスター）
+	\item \underline{浜村\ 俊傑}・小林\ 直 ・三宅\ 佑果・ 岡\ 大樹・千葉\ 俊周・本庄\ 勝・米山\ 暁夫（2021年9月8日～11月2日）．スマートフォン嗜癖はパンデミックにおいて変化しているのか——感染拡大前からの縦断調査——　日本心理学会第85回大会.（デジタルポスター）
 	\item \underline{浜村\ 俊傑}・本庄\ 勝・北村\ 美穂・浅野\ 昭祐・本庄\ 勝・米山\ 暁夫（2021年12月18日）．デジタル介入によるスマートフォンの問題利用への予防：子どもと保護者のための介入アプリの開発と予備実験　2021年度日本アルコール・アディクション医学会学術総会（口頭）
 
 \end{enumerate}
