--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -155,8 +155,8 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Manuscript Review}
 \begin{itemize}
-	\item International Journal of Mental Health and Addiction
-	\item Journal of Occupational Health
+	\item International Journal of Mental Health and Addiction (6)
+	\item Journal of Occupational Health (3)
 \end{itemize}
 
 \section{Awards}
