--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -56,7 +56,7 @@ thamamura[@]ncnp.go.jp\\
 	\item 2016--2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
 	\item 2017--2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
 	\item 2018--2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
-	\item 2019--present: \textbf{Psychologist}, National Center of Cognitive Behavior Therapy and Research, National Center for Neurology and Psychiatry, Japan
+	\item 2019--present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry, Japan
 	\item 2020--present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
 \end{itemize}
 
@@ -102,7 +102,6 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
 	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
 	\item Yasudomi, K. and \underline{Hamamura, T.} and Honjo, M. and Yoneyama, A. and Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
-	
 \end{enumerate}
 
 \subsection{Domestic Conference}
